--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -34,7 +34,7 @@
             </div>
 
             <button type="submit" class="btn btn-success">Save Changes</button>
-            <a href="{% url 'user-profile' %}" class="btn btn-secondary">Cancel</a>
+            <a href="{% url 'my-profile' %}" class="btn btn-secondary">Cancel</a>
         </form>
     </div>
 </div>
