--- a/posts/templates/posts/my_posts.html
+++ b/posts/templates/posts/my_posts.html
@@ -5,25 +5,30 @@
 
 <div class="d-flex mb-4">
     <a href="{% url 'create_post' %}" class="btn btn-success me-2">Create New Post</a>
-    <a href="{% url 'post_list' %}" class="btn btn-secondary">All Posts</a>
+    <a href="{% url 'post_list' %}" class="btn btn-primary">All Posts</a>
 </div>
 
-{% if posts %}
-    <ul class="list-group">
-        {% for post in posts %}
-        <li class="list-group-item">
-            <strong>{{ post.user.username }}</strong>: {{ post.content }}
-            {% if post.media %}
+<ul class="list-group">
+    {% for post in my_posts %}
+    <li class="list-group-item">
+        <strong>{{ post.user.username }}</strong>: {{ post.content }}
+        <br>
+        <small>{{ post.timestamp }}</small>
+        {% if post.media %}
             <br>
             <a href="{{ post.media.url }}" target="_blank">View Media</a>
-            {% endif %}
-            <br>
-            <small>{{ post.created_at }}</small>
-            <a href="{% url 'edit_post' post.id %}" class="btn btn-primary btn-sm ms-2">Edit</a>
-        </li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <p>You have no posts yet.</p>
-{% endif %}
+        {% endif %}
+
+        <div class="d-inline-block ms-3">
+            <a href="{% url 'edit_post' post.id %}" class="btn btn-secondary btn-sm me-1">Edit</a>
+            <form method="POST" action="{% url 'delete_post' post.id %}" class="d-inline" onsubmit="return confirm('Are you sure you want to delete this post?');">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+            </form>
+        </div>
+    </li>
+    {% empty %}
+    <li class="list-group-item">No posts yet.</li>
+    {% endfor %}
+</ul>
 {% endblock %}
