--- a/posts/templates/posts/create_post.html
+++ b/posts/templates/posts/create_post.html
@@ -3,13 +3,17 @@
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6">
-        <h2>Create Post</h2>
-        <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Post</button>
-        </form>
-        <a href="{% url 'post_list' %}" class="btn btn-secondary mt-2">Back to Posts</a>
+        <div class="card p-4">
+            <h2 class="mb-3">Create Post</h2>
+
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-success mt-2">Post</button>
+            </form>
+
+            <a href="{% url 'post_list' %}" class="btn btn-outline-secondary mt-3">Back to Posts</a>
+        </div>
     </div>
 </div>
 {% endblock %}
