--- a/posts/templates/posts/edit_post.html
+++ b/posts/templates/posts/edit_post.html
@@ -3,15 +3,17 @@
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6">
-        <h2>Edit Post</h2>
-        <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Save Changes</button>
-        </form>
-        <p class="mt-3">
-            <a href="{% url 'my_posts' %}" class="btn btn-secondary">Cancel</a>
-        </p>
+        <div class="card p-4">
+            <h2 class="mb-3">Edit Post</h2>
+
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-success mt-2">Save Changes</button>
+            </form>
+
+            <a href="{% url 'my_posts' %}" class="btn btn-outline-secondary mt-3">Cancel</a>
+        </div>
     </div>
 </div>
 {% endblock %}
