--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -3,16 +3,19 @@
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6">
-        <h2>Login</h2>
-        <form method="POST">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Login</button>
-        </form>
-        <p class="mt-2">
-            Don't have an account?
-            <a href="{% url 'user-register' %}">Register here</a>
-        </p>
+        <div class="card p-4">
+            <h2 class="mb-4 text-center">Login</h2>
+
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-success w-100 mt-2">Login</button>
+            </form>
+
+            <p class="mt-3 text-center">
+                Don't have an account? <a href="{% url 'user-register' %}">Register here</a>
+            </p>
+        </div>
     </div>
 </div>
 {% endblock %}
