--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -3,15 +3,19 @@
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6">
-        <h2>Register</h2>
-        <form method="POST">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
-        <p class="mt-2">
-            Already have an account? <a href="{% url 'login' %}">Login here</a>
-        </p>
+        <div class="card p-4">
+            <h2 class="mb-4 text-center">Register</h2>
+
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-success w-100 mt-2">Register</button>
+            </form>
+
+            <p class="mt-3 text-center">
+                Already have an account? <a href="{% url 'login' %}">Login here</a>
+            </p>
+        </div>
     </div>
 </div>
 {% endblock %}
