--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Social Media API</title>
-
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
@@ -25,9 +21,7 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'post_list' %}">Posts</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'following-list' %}">Following</a></li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}" onclick="return confirm('Are you sure you want to log out?');">
-                                Logout
-                            </a>
+                            <a class="nav-link" href="{% url 'logout' %}" onclick="return confirm('Are you sure you want to log out?');">Logout</a>
                         </li>
                     {% else %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'user-register' %}">Register</a></li>
@@ -39,14 +33,10 @@
     </nav>
 
     <div class="container">
-        {% block content %}
-        {% endblock %}
+        {% block content %}{% endblock %}
     </div>
 
-    <!-- Bootstrap Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Custom JS -->
     <script src="{% static 'js/main.js' %}" defer></script>
 </body>
 </html>
